thread id 확인 코드 downgrade